Added new author.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
-MTA: Paradise
+MTA: Paradise Extended
   mabako <mabako@gmail.com>
   sun <sun@optical-gaming.com>
   Calvin Wong Loi Sing <jumba990@gmail.com>
   Maccer / Fedor Sinev <fedorsinev@gmail.com>
+  Simple0x47 <simple0x47@gmail.com>
